Update com/sun/jndi/dns/Test6991580.java manual test instruction